# cortec-mcp

./: .gitignore  CORTEC.md  README.md  pyproject.toml
cortec/: __init__.py  agents.py  cli.py  config.py  conflicts.py  decay.py  github.py  graph.py  ingest.py  server.py  stackoverflow.py
cortec/agents/: __init__.py  debug_assistant.py  portfolio.py  pr_assistant.py
cortec/security/: redactor.py  scanner.py
cortec/storage/: db.py  vector.py
tests/: test_agents.py  test_conflicts.py  test_decay.py  test_decay_integration.py  test_github.py  test_graph.py  test_memory_types.py  test_security.py  test_stackoverflow.py
