[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortec-mcp"
version = "0.1.0"
description = "Local-first memory server for developer workflows"
authors = [{ name = "Raj Kumar Satya", email = "rajkumarrapeti@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["memory", "mcp", "developer-tools", "local-first", "vector-search", "claude", "ai-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=2.0.0",
    "chromadb>=0.5.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "detect-secrets>=1.4.0",
    "httpx>=0.27.0",
    "networkx>=3.0",
]

[project.urls]
Homepage = "https://github.com/rajkumar-prog/cortec-mcp"
Repository = "https://github.com/rajkumar-prog/cortec-mcp"
Issues = "https://github.com/rajkumar-prog/cortec-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
]

[project.scripts]
cortec = "cortec.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cortec"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
